minor CSS change

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -592,7 +592,7 @@ section,
 
 .hero p span {
   letter-spacing: 1px;
-  border-bottom: 2px solid var(--accent-color);
+  border-bottom: 2px solid #fdf24d;
 }
 
 .hero .social-links {
