Updated Contact Section

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -518,6 +518,7 @@ section,
 .section-title {
   padding-bottom: 60px;
   position: relative;
+  text-align: center;
 }
 
 .section-title h2 {
@@ -535,8 +536,9 @@ section,
   width: 50px;
   height: 3px;
   background: var(--accent-color);
-  left: 0;
+  left: 50%;
   bottom: 0;
+  transform: translateX(-50%);
 }
 
 .section-title p {
