removed --- from start

--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -1,6 +1,3 @@
----
----
-
 <header id="header" class="header dark-background d-flex flex-column">
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
@@ -25,7 +22,7 @@
 
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="{{ '/#hero' | url }}" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
+        <li><a href="{{ '/' | url }}" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
         <li><a href="{{ '/#about' | url }}"><i class="bi bi-person navicon"></i> About</a></li>
         <li><a href="{{ '/#skills' | url }}"><i class="bi bi-person navicon"></i> Skills</a></li>
         <li><a href="{{ '/#resume' | url }}"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
