--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -47,13 +47,13 @@
 
 <body class="{{ body-class }}">
 
-    {% include "header.html" %}
+    {% render "header.html" %}
 
     <main class="main">
         {{ content }}
     </main>
 
-    {% include "footer.html" %}
+    {% render "footer.html" %}
 
     <!-- Scroll Top -->
     <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
