Added contact section template and created global data json files for each section

--- a/src/_includes/about-section.html
+++ b/src/_includes/about-section.html
@@ -34,7 +34,7 @@
               <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master of Science</span></li>
               <li><i class="bi bi-chevron-right"></i> <strong>Major:</strong> <span>Computer Science</span></li>
               <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span><a href="mailto:{{ about-me.email }}">{{ about-me.email }}</a></span></li>
-              <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span><a href="tel:+15124120861">+1-512-412-0861</a></span></li>
+              <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span><a href="tel:{{ about-me.contact.link }}">{{ about-me.contact.number }}</a></span></li>
               <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="{{ '/' | url }}">pandyadeval.github.io</a></span></li>
             </ul>
           </div>
