--- a/src/_includes/resume-section.html
+++ b/src/_includes/resume-section.html
@@ -6,7 +6,7 @@
         <h2>
         Resume  
         </h2> 
-        <a href="/assets/resumes/Deval_Pandya_Resume.pdf" target="_blank"><i class="bi bi-download fs-4"></i></a>
+        <a href="{{ resume.file }}" target="_blank"><i class="bi bi-download fs-4"></i></a>
     </div><!-- End Section Title -->
 
     <div class="container">
@@ -17,89 +17,40 @@
             <h3 class="resume-title">Sumary</h3>
 
             <div class="resume-item pb-0">
-            <h4>Deval Pandya</h4>
-            <p><em>Versatile Computer Science graduate with a robust academic foundation, including a 4.0 GPA in
-                a Master's program from Arizona State University, and hands-on experience in data analysis,
-                machine learning, and software engineering. Proven ability to develop scalable ML pipelines,
-                optimize complex systems, and lead high-impact projects, demonstrated through internships
-                and professional roles at JP Morgan Chase, ANB Systems, and research contributions at
-                Arizona State University.</em></p>
+            <h4>{{ about-me.name }}</h4>
+            <p><em>{{ about-me.description }}</em></p>
             <ul>
-                <li>Phoenix, AZ</li>
-                <li>+1-512-412-0861</li>
-                <li>devaljpandya@gmail.com</li>
+                <li>{{ about-me.city }}</li>
+                <li>{{ about-me.contact.number }}</li>
+                <li>{{ about-me.email }}</li>
             </ul>
             </div><!-- End Resume Item -->
 
             <h3 class="resume-title">Education</h3>
-            <div class="resume-item">
-            <h4>Master of Science - Computer Science</h4>
-            <h5>2022 - 2024</h5>
-            <p><em>Arizona State University, Tempe, AZ</em></p>
-            <p>GPA: 4.0 out of 4.0</p>
-            </div><!-- End Resume Item -->
 
-            <div class="resume-item">
-            <h4>Bachelor of Technology - Computer Engineering</h4>
-            <h5>2016 - 2020</h5>
-            <p><em>Sardar Vallabhbhai National Institute of Technology, Surat, GJ</em></p>
-            <p>GPA: 8.04 out of 10.0</p>
-            </div><!-- End Resume Item -->
+            {% for education in resume.educations %}
+                <div class="resume-item">
+                    <h4>{{ education.degree }} - {{ education.major }}</h4>
+                    <h5>{{ education.start-date }} - {{ education.end-date }}</h5>
+                    <p><em>{{ education.university }}, {{ education.location }}</em></p>
+                    <p>GPA: {{ education.gpa }}</p>
+                </div><!-- End Resume Item -->
+            {% endfor %}
 
             <h3 class="resume-title">Professional Experience</h3>
-            <div class="resume-item">
-            <h4>Data Analyst Intern</h4>
-            <h5>January 2024 - May 2024</h5>
-            <p><em>ANB Systems LLC, Houston, TX</em></p>
-            <ul>
-                <li>Developed and deployed a scalable, automated ML pipeline using AWS services to streamline model training, improving turnaround time and resource efficiency for various ML models</li>
-                <li>Enhanced the company’s existing ML architecture by integrating active learning mechanisms and standardizing workflows, resulting in significant reduction of manual processes and enabling seamless future model integration and updates.</li>
-            </ul>
-            </div><!-- End Resume Item -->
 
-            <div class="resume-item">
-            <h4>Research Aide</h4>
-            <h5>November 2022 - January 2024</h5>
-            <p><em>Arizona State University, Tempe, AZ</em></p>
-            <ul>
-                <li>Performance tuned a CNN-LSTM model to predict the trajectory of an airplane based on its 3 control surfaces in a NASA project.</li>
-                <li>Achieved precision of upto 0.04 mm for predicting the location of a solder joint crack on a PCB using AE sensor data in an Intel Project.</li>
-            </ul>
-            </div><!-- End Resume Item -->
-
-            <div class="resume-item">
-            <h4>Software Engineer</h4>
-            <h5>August 2020 - August 2022</h5>
-            <p><em>JP Morgan Chase, Mumbai, MH</em></p>
-            <ul>
-                <li>Managed to reduce the overhead of a critical application by 90% along with increasing its availability and performance.</li>
-                <li>Solved several production issues as well as security vulnerabilities and also took part in many production deployments for the products.</li>
-                <li>Successfully achieved a modernization task for an application by updating its authentication methods from SAML to OAuth2.</li>
-                <li>Developed and optimized efficient SQL routines and procedures for multiple applications.</li>
-            </ul>
-            </div><!-- End Resume Item -->
-
-            <div class="resume-item">
-            <h4>Software Engineer Intern</h4>
-            <h5>May 2019 - July 2019</h5>
-            <p><em>JP Morgan Chase, Mumbai, MH</em></p>
-            <ul>
-                <li>Created a cloud-native chatbot for helping new hires with the on-boarding process interactively.</li>
-                <li>Developed features like following various story lines to help the user with the process.</li>
-                <li>Utilized Kubernetes clusters to host back-end and front-end servers for improving performance, security and availability.</li>
-            </ul>
-            </div><!-- End Resume Item -->
-
-            <div class="resume-item">
-            <h4>Summer Intern</h4>
-            <h5>May 2018 - July 2018</h5>
-            <p><em>MobileFirst Application, Ahmedabad, GJ</em></p>
-            <ul>
-                <li>Implemented basic sentimental analysis on tweets using NLP and probabilistic models.</li>
-                <li>Developed a portable air quality checker using various gas sensors to collect appropriate data.</li>
-                <li>The collected data is then sent to an online database using the WiFi module.</li>
-            </ul>
-            </div><!-- End Resume Item -->
+            {% for experience in resume.experiences %}
+                <div class="resume-item">
+                    <h4>{{ experience.position }}</h4>
+                    <h5>{{ experience.start-date }} - {{ experience.end-date }}</h5>
+                    <p><em>{{ experience.company }}, {{ experience.location }}</em></p>
+                    <ul>
+                        {% for bullet in experience.bullets %}
+                            <li>{{ bullet }}</li>
+                        {% endfor %}
+                    </ul>
+                </div><!-- End Resume Item -->
+            {% endfor %}
 
         </div>
 
