--- a/src/_includes/skills-section.html
+++ b/src/_includes/skills-section.html
@@ -12,7 +12,7 @@
     
             <div class="col-lg-6">
 
-            {% for skill in left-skills %}
+            {% for skill in skills.left-skills %}
                 <div class="progress">
                     <span class="skill"><span>{{ skill.name }}</span> <i class="val">{{ skill.percent }}%</i></span>
                     <div class="progress-bar-wrap">
@@ -25,7 +25,7 @@
     
             <div class="col-lg-6">
     
-            {% for skill in right-skills %}
+            {% for skill in skills.right-skills %}
                 <div class="progress">
                     <span class="skill"><span>{{ skill.name }}</span> <i class="val">{{ skill.percent }}%</i></span>
                     <div class="progress-bar-wrap">
