--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -22,7 +22,7 @@
 
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="{{ '/' | url }}" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
+        <li><a href="{{ '/#' | url }}" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
         <li><a href="{{ '/#about' | url }}"><i class="bi bi-person navicon"></i> About</a></li>
         <li><a href="{{ '/#skills' | url }}"><i class="bi bi-person navicon"></i> Skills</a></li>
         <li><a href="{{ '/#resume' | url }}"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
