Created layout for portfolio details page and updated all pages to use it

--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -8,7 +8,13 @@
   
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  
+  {% if project-key %}
+    <title>{{ portfolio.projects[project-key].title }}</title>
+  {% else %}
   <title>{{ title }}</title>
+  {% endif %}
+
   <meta content="" name="description">
   <meta content="" name="keywords">
 
